# discode

./: .gitignore  Cargo.toml  README.md
.github/workflows/: checks.yml
.sqlx/: query-31e0636d057302bd36dde894ef9e14ee5744bb34685d540aaed320b7f4c88415.json  query-46f59ec1c977fde17c527f4c159cbdc5c13b72346cb0f9d538d9d34d88b2359f.json  query-75498e7522cebd1d7791856ccc84599ff0380c2e558fbe8c7fed8bf04c784aa7.json  query-969527b721e17cd37656cd0e6318793f803c3dd2ed6979097d469329db80310c.json  query-9931a7a83246702ab11289c48315ae2aa76580854731766f2663b8b426952f24.json  query-b0e7ae97f66131fb9f7cb995e61d052557f483075f4374ebb34f20b763b9dbd3.json
migrations/: 0000-create-migrations-table.sql  0001-create-leetcode-connection-table.sql  20240726005406_create-leetcode-connections.sql  20240726005439_create-connection-tokens.sql
scripts/: create_migration_table  load_env.bash  load_env.fish  new_migration  start-dev-db-container  start-test-db-container
src/: main.rs
src/commands/: connect.rs  daily.rs  mod.rs  ping.rs  problem.rs  score.rs
src/db/: init.rs  migrate.rs  mod.rs  models.rs
src/db/models/: connect_token.rs  leetcode_connection.rs  mod.rs
src/leetcode/: img_tag_handler.rs  mod.rs  models.rs  views.rs
src/leetcode/query/: acceptance_rate.rs  completed_questions_count.rs  daily_problem_slug.rs  error.rs  mod.rs  problem_description.rs  problem_slug_by_id.rs  user_skills.rs
