[package]
name = "daily-leetcode-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
dotenv = "0.15.0"
html2md = "0.2.14"
rand = "0.8.5"
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
serde = "1.0.204"
serde_json = "1.0.120"
serenity = "0.12.2"
sqlx = { version ="0.8.0", features = [ "runtime-tokio", "tls-native-tls", "postgres" ] }
tokio = { version = "1.38.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dev-dependencies]
cargo-llvm-cov = "0.6.11"
sqlx-cli = "0.8.0"
